--- a/company.html
+++ b/company.html
@@ -29,13 +29,13 @@
 
                 <ul class="nav-links flex" id="nav-links">
                     <a href="#">
-                        <li class="nav-links_item active">Home</li>
+                        <li class="nav-links_item">Home</li>
                     </a>
                     <a href="order.html">
                         <li class="nav-links_item">Order</li>
                     </a>
                     <a href="company.html">
-                        <li class="nav-links_item">Company</li>
+                        <li class="nav-links_item active">Company</li>
                     </a>
                     <a href="faq.html">
                         <li class="nav-links_item">FAQ</li>
