--- a/company.html
+++ b/company.html
@@ -28,13 +28,13 @@
                 </div>
 
                 <ul class="nav-links flex" id="nav-links">
-                    <a href="#">
+                    <a href="index.html">
                         <li class="nav-links_item">Home</li>
                     </a>
                     <a href="order.html">
                         <li class="nav-links_item">Order</li>
                     </a>
-                    <a href="company.html">
+                    <a href="#">
                         <li class="nav-links_item active">Company</li>
                     </a>
                     <a href="faq.html">
