--- a/company.html
+++ b/company.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <ul class="nav-links flex" id="nav-links">
-                    <a href="index.html">
+                    <a href="../">
                         <li class="nav-links_item">Home</li>
                     </a>
                     <a href="order.html">
