--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <h1 class="colored">Browse our menu</h1>
         <p class="browse-parag">Use our menu to pick an order online, or <a href="#" class="colored">phone</a> our store
             to place a pickup order. Fast and fresh food</p>
-
+            <!-- active-btn -->
         <div class="browse-buttons">
             <button class="js-btn active-btn" id="burgers-btn" onclick="burgersBtn()">Burgers</button>
             <button class="js-btn btn-brws" id="sides-btn" onclick="sidesBtn()">Sides</button>
@@ -169,11 +169,7 @@
         </div>
 
 
-
-
-
-
-        <div class="browse-cards active" id="burgers">
+        <div class="browse-cards" id="burgers">
             <div class="browse-cards_row">
                 <div class="browse-cards_col flex">
                     <div class="card_img2">
@@ -353,8 +349,6 @@
                 </div>
             </div>
             </div>
-
-
 
 
             <div class="browse-cards" id="drinks">
